Added option for disabling test compilation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,16 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+option(BITSCPP_BUILD_TEST "Build bitscpp tests" ON)
+
 include_directories(./include/)
 
-aux_source_directory(./include/bitscpp header_files)
-aux_source_directory(./tests source_files)
-
-add_executable(test
-	${header_files}
-	${source_files}
-)
-
+if(BITSCPP_BUILD_TEST)
+	aux_source_directory(./include/bitscpp header_files)
+	aux_source_directory(./tests source_files)
+	
+	add_executable(test
+		${header_files}
+		${source_files}
+	)
+endif()
